refactor: 로비 응답에 공통 WebSocketResponse 적용 및 PlayerColor Enum 통합